--- a/grafana-docker/Dockerfile
+++ b/grafana-docker/Dockerfile
@@ -1,22 +1,9 @@
-FROM debian:jessie
+ARG GRAFANA_VERSION="latest"
 
-ARG DOWNLOAD_URL="https://s3-us-west-2.amazonaws.com/grafana-releases/master/grafana_latest_amd64.deb"
+FROM grafana/grafana:${GRAFANA_VERSION}
 
-RUN apt-get update && \
-    apt-get -y --no-install-recommends install libfontconfig curl ca-certificates && \
-    apt-get clean && \
-    curl ${DOWNLOAD_URL} > /tmp/grafana.deb && \
-    dpkg -i /tmp/grafana.deb && \
-    rm /tmp/grafana.deb && \
-    curl -L https://github.com/tianon/gosu/releases/download/1.10/gosu-amd64 > /usr/sbin/gosu && \
-    chmod +x /usr/sbin/gosu && \
-    apt-get autoremove -y && \
-    rm -rf /var/lib/apt/lists/*
+#ARG DOWNLOAD_URL="https://s3-us-west-2.amazonaws.com/grafana-releases/master/grafana_latest_amd64.deb"
+#RUN  curl https://grafanarel.s3.amazonaws.com/builds/grafana_${GRAFANA_VERSION}_amd64.deb > /tmp/grafana.deb 
 
-VOLUME ["/var/lib/grafana", "/var/log/grafana", "/etc/grafana"]
-
-EXPOSE 3000
-
-COPY ./run.sh /run.sh
-
-ENTRYPOINT ["/run.sh"]
+RUN mkdir -p /data/grafana/plugins && chown -R grafana:grafana /data/grafana/plugins
+RUN grafana-cli --pluginsDir "/data/grafana/plugins" plugins install foursquare-clouderamanager-datasource 
