--- a/grafana-docker/Dockerfile
+++ b/grafana-docker/Dockerfile
@@ -1,6 +1,7 @@
+FROM grafana/grafana:latest
+
 ARG GRAFANA_VERSION="latest"
 
-FROM grafana/grafana:${GRAFANA_VERSION}
 
 #ARG DOWNLOAD_URL="https://s3-us-west-2.amazonaws.com/grafana-releases/master/grafana_latest_amd64.deb"
 #RUN  curl https://grafanarel.s3.amazonaws.com/builds/grafana_${GRAFANA_VERSION}_amd64.deb > /tmp/grafana.deb 
